# ncea-lvl2-web-flask-example

./: .pdm-python  LICENSE  README.md  db_create.py  main.py  pyproject.toml  users.db
flaskapp/: __init__.py  blog.py  db.py  schema.sql
flaskapp/templates/: base.html
flaskapp/templates/components/: navbar.html
src/flaskapp/: __init__.py  blog.py  schema.sql
src/flaskapp/static/: style.css
src/flaskapp/templates/: base.html
src/flaskapp/templates/blog/: create.html  index.html  post.html  search.html
src/flaskapp/templates/components/: comment.html  footer.html  navbar.html  post.html
src/tests/: conftest.py  data.sql  test_db.py  test_factory.py
templates/: base.html  header.html  index.html
tests/: conftest.py  test_blog.py  test_db.py
